# Auth_sprint

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  gevent_runner.py  pyproject.toml
app/: __init__.py  __main__.py  utils.py
app/api/: __init__.py
app/api/v1/: __init__.py  auth.py  oauth.py  roles.py  users.py
app/core/: alchemy.py  config.py  enums.py  limiter.py  redis.py  tracing.py
app/core/oauth/: __init__.py  base.py  google.py  mail.py  vk.py  yandex.py
app/models/: __init__.py  db_models.py
app/serializers/: auth.py  roles.py  users.py
migrations/: alembic.ini
migrations/versions/: 233a887b105b_initial_migration.py  ad1f929c6e10_social_accounts.py
nginx/: default.conf
tests/: docker-compose.yml
tests/functional/: conftest.py  settings.py
tests/functional/src/: auth_test.py  roles_test.py  users_test.py
